--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
-  "name": "Prodigious Playground",
+  "name": "prodigious-playground",
   "version": "0.0.0",
   "dependencies": {
+    "jquery": "^3.4.1"
   },
   "devDependencies": {}
 }
